bug: try to fix unnecessary scrollbars on chrome

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -1,3 +1,10 @@
+/* Workaround horizontal scrollbar showing up when it shouldn't */
+
+.v-snack::-webkit-scrollbar,
+:not(div)::-webkit-scrollbar {
+    display: none;
+}
+
 /* Is this a bad idea? Prevents firefox warning in console. */
 
 * {
@@ -132,7 +139,8 @@
     border: 1px solid #9e9e9e;
 }
 
-.mx-input:focus, .mx-input:hover {
+.mx-input:focus,
+.mx-input:hover {
     border-color: rgb(0, 0, 0, 0.65);
 }
 
@@ -243,7 +251,8 @@ body {
     min-height: unset !important;
 }
 
-.v-label, .v-label.theme--light {
+.v-label,
+.v-label.theme--light {
     font-size: 15px !important;
     letter-spacing: 0px !important;
     color: #bebebe !important;
@@ -263,11 +272,13 @@ body {
     letter-spacing: unset !important;
 }
 
-.v-card__subtitle, .v-card__text {
+.v-card__subtitle,
+.v-card__text {
     letter-spacing: unset !important;
 }
 
-.v-tooltip, .v-tooltip__content {
+.v-tooltip,
+.v-tooltip__content {
     font-size: 14px !important;
     background-color: black !important;
     color: #fff !important;
@@ -293,7 +304,9 @@ tbody tr:nth-of-type(odd) {
     text-align: left !important;
 }
 
-.v-data-table>.v-data-table__wrapper>table>tbody>tr>td, .v-data-table>.v-data-table__wrapper>table>thead>tr>td, .v-data-table>.v-data-table__wrapper>table>tfoot>tr>td {
+.v-data-table>.v-data-table__wrapper>table>tbody>tr>td,
+.v-data-table>.v-data-table__wrapper>table>thead>tr>td,
+.v-data-table>.v-data-table__wrapper>table>tfoot>tr>td {
     font-size: 14px !important;
 }
 
@@ -334,7 +347,8 @@ header vertical alignment */
     flex: 1;
 }
 
-.tab-wrapper .v-window__container, .tab-wrapper .v-window-item {
+.tab-wrapper .v-window__container,
+.tab-wrapper .v-window-item {
     height: 100%;
 }
 
